test/trivial/bradc/initvarsamename.good
Error: Variable 'x' used before it is defined (initvarsamename.chpl:4)
